Fix resource Kinds

--- a/examples/local_repositories/local_cran_repository/local_cran_repository.yaml
+++ b/examples/local_repositories/local_cran_repository/local_cran_repository.yaml
@@ -1,5 +1,5 @@
 apiVersion: local.artifactory.jfrog.crossplane.io/v1alpha1
-kind: CranRepository
+kind: CRANRepository
 metadata:
   name: cran-example-crossplane-local
 spec:
