--- a/examples/local_repositories/local_huggingfaceml_repository/local_huggingfaceml_repository.yaml
+++ b/examples/local_repositories/local_huggingfaceml_repository/local_huggingfaceml_repository.yaml
@@ -1,5 +1,5 @@
 apiVersion: local.artifactory.jfrog.crossplane.io/v1alpha1
-kind: HuggingfacemlRepository
+kind: HuggingFaceMLRepository
 metadata:
   name: huggingfaceml-example-crossplane-local
 spec:
