--- a/examples/local_repositories/local_npm_repository/local_npm_repository.yaml
+++ b/examples/local_repositories/local_npm_repository/local_npm_repository.yaml
@@ -1,5 +1,5 @@
 apiVersion: local.artifactory.jfrog.crossplane.io/v1alpha1
-kind: NpmRepository
+kind: NPMRepository
 metadata:
   name: npm-example-crossplane-local
 spec:
