--- a/examples/local_repositories/local_pypi_repository/local_pypi_repository.yaml
+++ b/examples/local_repositories/local_pypi_repository/local_pypi_repository.yaml
@@ -1,5 +1,5 @@
 apiVersion: local.artifactory.jfrog.crossplane.io/v1alpha1
-kind: PypiRepository
+kind: PyPIRepository
 metadata:
   name: pypi-example-crossplane-local
 spec:
