--- a/examples/remote_repositories/remote_opkg_repository/remote_opkg_repository.yaml
+++ b/examples/remote_repositories/remote_opkg_repository/remote_opkg_repository.yaml
@@ -1,5 +1,5 @@
 apiVersion: remote.artifactory.jfrog.crossplane.io/v1alpha1
-kind: OpkgRepository
+kind: OPKGRepository
 metadata:
   name: opkg-example-crossplane-remote
 spec:
