--- a/examples/local_repositories/local_cocoapods_repository/local_cocoapods_repository.yaml
+++ b/examples/local_repositories/local_cocoapods_repository/local_cocoapods_repository.yaml
@@ -1,5 +1,5 @@
 apiVersion: local.artifactory.jfrog.crossplane.io/v1alpha1
-kind: CocoapodsRepository
+kind: CocoaPodsRepository
 metadata:
   name: cocoapods-example-crossplane-local
 spec:
