--- a/examples/local_repositories/local_nuget_repository/local_nuget_repository.yaml
+++ b/examples/local_repositories/local_nuget_repository/local_nuget_repository.yaml
@@ -1,5 +1,5 @@
 apiVersion: local.artifactory.jfrog.crossplane.io/v1alpha1
-kind: NugetRepository
+kind: NuGetRepository
 metadata:
   name: nuget-example-crossplane-local
 spec:
