--- a/examples/local_repositories/local_sbt_repository/local_sbt_repository.yaml
+++ b/examples/local_repositories/local_sbt_repository/local_sbt_repository.yaml
@@ -1,5 +1,5 @@
 apiVersion: local.artifactory.jfrog.crossplane.io/v1alpha1
-kind: SbtRepository
+kind: SBTRepository
 metadata:
   name: sbt-example-crossplane-local
 spec:
