--- a/examples/remote_repositories/remote_sbt_repository/remote_sbt_repository.yaml
+++ b/examples/remote_repositories/remote_sbt_repository/remote_sbt_repository.yaml
@@ -1,5 +1,5 @@
 apiVersion: remote.artifactory.jfrog.crossplane.io/v1alpha1
-kind: SbtRepository
+kind: SBTRepository
 metadata:
   name: sbt-example-crossplane-remote
 spec:
