--- a/package/crds/remote.artifactory.jfrog.crossplane.io_terraformrepositories.yaml
+++ b/package/crds/remote.artifactory.jfrog.crossplane.io_terraformrepositories.yaml
@@ -106,7 +106,10 @@ spec:
                       HEAD requests are disallowed and therefore rejected, even though
                       downloading the artifact is allowed. When checked, Artifactory
                       will bypass the HEAD request and cache the artifact directly
-                      using a GET request.
+                      using a GET request.io, registry.opentofu.org), this must be
+                      set to `true` as Artifactory automatically enforces this setting.
+                      For tf.app.wiz.io, this is required only for Artifactory 7.122.0
+                      and later. Defaults to `false`.
                     type: boolean
                   cdnRedirect:
                     description: When set, download requests to this repository will
@@ -386,7 +389,10 @@ spec:
                       HEAD requests are disallowed and therefore rejected, even though
                       downloading the artifact is allowed. When checked, Artifactory
                       will bypass the HEAD request and cache the artifact directly
-                      using a GET request.
+                      using a GET request.io, registry.opentofu.org), this must be
+                      set to `true` as Artifactory automatically enforces this setting.
+                      For tf.app.wiz.io, this is required only for Artifactory 7.122.0
+                      and later. Defaults to `false`.
                     type: boolean
                   cdnRedirect:
                     description: When set, download requests to this repository will
@@ -749,7 +755,10 @@ spec:
                       HEAD requests are disallowed and therefore rejected, even though
                       downloading the artifact is allowed. When checked, Artifactory
                       will bypass the HEAD request and cache the artifact directly
-                      using a GET request.
+                      using a GET request.io, registry.opentofu.org), this must be
+                      set to `true` as Artifactory automatically enforces this setting.
+                      For tf.app.wiz.io, this is required only for Artifactory 7.122.0
+                      and later. Defaults to `false`.
                     type: boolean
                   cdnRedirect:
                     description: When set, download requests to this repository will
