--- a/config/provider-metadata.yaml
+++ b/config/provider-metadata.yaml
@@ -23,7 +23,7 @@ resources:
         importStatements: []
     artifactory_archive_policy:
         subCategory: ""
-        description: Provides an Artifactory Archive Policy resource. This resource enable system administrators to define and customize policies based on specific criteria for removing unused binaries from across their JFrog platform. See Retention Policies https://jfrog.com/help/r/jfrog-platform-administration-documentation/retention-policies for more details.
+        description: Provides an Artifactory Archive Policy resource. This resource enable system administrators to define and customize policies based on specific criteria for removing unused binaries from across their JFrog platform. See Retention Policies https://jfrog.com/help/r/jfrog-platform-administration-documentation/retention-policies for more details. ~>Currently in beta and not yet globally available. A full rollout is scheduled for Q1 2025.
         name: artifactory_archive_policy
         title: artifactory_archive_policy Resource - terraform-provider-artifactory
         examples:
@@ -100,24 +100,20 @@ resources:
                       "project_key": "${project.myproj.key}"
                     }
         argumentDocs:
-            created_before_in_days: (Number) The archive policy will archive packages based on how long ago they were created. For example, if this parameter is 2 then packages created more than 2 days ago will be archived as part of the policy.
-            created_before_in_months: (Number, Deprecated) The archive policy will archive packages based on how long ago they were created. For example, if this parameter is 2 then packages created more than 2 months ago will be archived as part of the policy.
+            created_before_in_months: (Number) The archive policy will archive packages based on how long ago they were created. For example, if this parameter is 2 then packages created more than 2 months ago will be archived as part of the policy.
             cron_expression: (String) The cron expression determines when the policy is run. This parameter is not mandatory, however if left empty the policy will not run automatically and can only be triggered manually.
             description: (String)
             duration_in_minutes: (Number) The maximum duration (in minutes) for policy execution, after which the policy will stop running even if not completed. While setting a maximum run duration for a policy is useful for adhering to a strict archive V2 schedule, it can cause the policy to stop before completion.
             enabled: (Boolean) Enables or disabled the package cleanup policy. This allows the user to run the policy manually. If a policy has a valid cron expression, then it will be scheduled for execution based on it. If a policy is disabled, its future executions will be unscheduled. Defaults to true
             excluded_packages: (Set of String) Specify explicit package names that you want excluded from the policy. Only Name explicit names (and not patterns) are accepted.
-            excluded_properties: (Map of List of String) A key-value pair applied to the lead artifact of a package. Packages with this property will be excluded from archival.
             excluded_repos: (Set of String) Specify patterns for repository names or explicit repository names that you want excluded from the archive policy.
             include_all_projects: (Boolean) Set this value to true if you want the policy to run on all Artifactory projects. The default value is false.
             included_packages: '(Set of String) Specify a pattern for a package name or an explicit package name. It accept only single element which can be specific package or pattern, and for including all packages use **. Example: included_packages = ["**"]'
             included_projects: (Set of String) List of projects on which you want this policy to run. To include repositories that are not assigned to any project, enter the project key default.
-            included_properties: (Map of List of String) A key-value pair applied to the lead artifact of a package. Packages with this property will be archived.
             keep_last_n_versions: (Number) Set a value for the number of latest versions to keep. The archive policy will remove all versions before the number you select here. The latest version is always excluded.
             key: (String) An ID that is used to identify the archive policy. A minimum of three characters is required and can include letters, numbers, underscore and hyphen.
-            last_downloaded_before_in_days: (Number) The archive policy will archive packages based on how long ago they were downloaded. For example, if this parameter is 5 then packages downloaded more than 5 days ago will be archived as part of the policy.
-            last_downloaded_before_in_months: (Number, Deprecated) The archive policy will archive packages based on how long ago they were downloaded. For example, if this parameter is 5 then packages downloaded more than 5 months ago will be archived as part of the policy.
-            package_types: '(Set of String) The package types that are archived by the policy. Support: alpine, ansible, cargo, chef, cocoapods, composer, conan, conda, debian, docker, gems, generic, go, gradle, helm, helmoci, huggingfaceml, machinelearning, maven, npm, nuget, oci, opkg, puppet, pypi, sbt, swift, terraform, terraformbackend, vagrant, rpm, yum.'
+            last_downloaded_before_in_months: (Number) The archive policy will archive packages based on how long ago they were downloaded. For example, if this parameter is 5 then packages downloaded more than 5 months ago will be archived as part of the policy.
+            package_types: '(Set of String) The package types that are archived by the policy. Support: cargo, cocoapods, conan, debian, docker, gems, generic, go, gradle, helm, helmoci, huggingfaceml, maven, npm, nuget, oci, pypi, terraform, yum.'
             project_key: (String) This attribute is used only for project-level archive V2 policies, it is not used for global-level policies.
             repos: '(Set of String) Specify one or more patterns for the repository name(s) on which you want the archive policy to run. You can also specify explicit repository names. Specifying at least one pattern or explicit name is required. Only packages in repositories that match the pattern or explicit name will be archived. For including all repos use **. Example: repos = ["**"]'
             search_criteria: (Attributes) (see below for nested schema)
@@ -3394,7 +3390,6 @@ resources:
             last_downloaded_before_in_days: (Number) The cleanup policy will delete packages based on how long ago they were downloaded. For example, if this parameter is 5 then packages downloaded more than 5 days ago will be deleted as part of the policy.
             last_downloaded_before_in_months: (Number, Deprecated) The cleanup policy will delete packages based on how long ago they were downloaded. For example, if this parameter is 5 then packages downloaded more than 5 months ago will be deleted as part of the policy.
             package_types: '(Set of String) The package types that are cleaned up by the policy. Support: alpine, ansible, cargo, chef, cocoapods, composer, conan, conda, debian, docker, gems, generic, go, gradle, helm, helmoci, huggingfaceml, machinelearning, maven, npm, nuget, oci, puppet, pypi, sbt, swift, terraform, terraformbackend, rpm, yum.'
-            project_key: (String) This attribute is used only for project-level cleanup policies, it is not used for global-level policies.
             repos: '(Set of String) Specify one or more patterns for the repository name(s) on which you want the cleanup policy to run. You can also specify explicit repository names. Specifying at least one pattern or explicit name is mandatory. Only packages in repositories that match the pattern or explicit name will be deleted. For including all repos use **. Example: repos = ["**"]'
             search_criteria: (Attributes) (see below for nested schema)
             skip_trashcan: (Boolean) A true value means that when this policy is executed, packages will be permanently deleted. false means that when the policy is executed packages will be deleted to the Trash Can.
@@ -5839,7 +5834,7 @@ resources:
             assumed_offline_period_secs: (Number) The number of seconds the repository stays in assumed offline state after a connection error. At the end of this time, an online check is attempted in order to reset the offline status. A value of 0 means the repository is never assumed offline.
             blacked_out: (Boolean) (A.K.A 'Ignore Repository' on the UI) When set, the repository or its local cache do not participate in artifact resolution.
             block_mismatching_mime_types: (Boolean) If set, artifacts will fail to download if a mismatch is detected between requested and received mimetype, according to the list specified in the system properties file under blockedMismatchingMimeTypes. You can override by adding mimetypes to the override list 'mismatching_mime_types_override_list'.
-            bypass_head_requests: '(Boolean) Before caching an artifact, Artifactory first sends a HEAD request to the remote resource. In some remote resources, HEAD requests are disallowed and therefore rejected, even though downloading the artifact is allowed. When checked, Artifactory will bypass the HEAD request and cache the artifact directly using a GET request. Note: For terraform registries (registry.terraform.io, registry.opentofu.org), this must be set to true as Artifactory automatically enforces this setting. For tf.app.wiz.io, this is required only for Artifactory 7.122.0 and later. Defaults to false.'
+            bypass_head_requests: (Boolean) Before caching an artifact, Artifactory first sends a HEAD request to the remote resource. In some remote resources, HEAD requests are disallowed and therefore rejected, even though downloading the artifact is allowed. When checked, Artifactory will bypass the HEAD request and cache the artifact directly using a GET request.
             cdn_redirect: (Boolean) When set, download requests to this repository will redirect the client to download the artifact directly from AWS CloudFront. Available in Enterprise+ and Edge licenses only. Default value is 'false'
             client_tls_certificate: (String) Client TLS certificate name.
             content_synchronisation: (Block List) (see below for nested schema)
