--- a/examples/namespaced/federated_repositories/federated_cargo_repository/repository.yaml
+++ b/examples/namespaced/federated_repositories/federated_cargo_repository/repository.yaml
@@ -10,4 +10,5 @@ spec:
       - url: "http://localhost:8082/artifactory/federated-cargo-example"
         enabled: true
   providerConfigRef:
+    kind: ClusterProviderConfig
     name: default
