--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -318,6 +318,19 @@ jobs:
       - name: Vendor Dependencies
         run: make vendor vendor.check
 
+      # Build Artifacts failed with an error
+      #   'No space left on device'
+      - name: Free Disk Space (Ubuntu)
+        uses: jlumbroso/free-disk-space@v1.3.1
+        with:
+          # Values for 2025-10-19
+          android: true # Android library: Saved 9.6GiB
+          dotnet: false # .NET runtime: Saved 3.3GiB
+          haskell: false # Haskell runtime: Saved 6.2GiB
+          large-packages: false # Large misc. packages: Saved 4.6GiB
+          docker-images: false # Docker images: Saved 78MiB
+          swap-storage: false # Swap storage: Saved 4.0GiB
+
       - name: Build Artifacts
         run: make -j2 build.all
         env:
